tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__result__test__emit_result_codegen@llvm14_7.snap
---
source: tket-qsystem/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@res_test_arr_i.DFD30452.0 = private constant [25 x i8] c"\18USER:INTARR:test_arr_int"

define void @_hl.main.1({ i64*, i64 } %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %tag_len = load i8, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @res_test_arr_i.DFD30452.0, i32 0, i32 0), align 1
  %tag_len2 = zext i8 %tag_len to i64
  %array_ptr = extractvalue { i64*, i64 } %0, 0
  %array_offset = extractvalue { i64*, i64 } %0, 1
  %1 = getelementptr inbounds i64, i64* %array_ptr, i64 %array_offset
  %out_arr_alloca = alloca <{ i32, i32, i64*, i1* }>, align 8
  %x_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 0
  %y_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 1
  %arr_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 2
  %mask_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 3
  %2 = alloca i1, i32 10, align 1
  %3 = bitcast i1* %2 to [10 x i1]*
  store [10 x i1] zeroinitializer, [10 x i1]* %3, align 1
  store i32 10, i32* %x_ptr, align 4
  store i32 1, i32* %y_ptr, align 4
  store i64* %1, i64** %arr_ptr, align 8
  store i1* %2, i1** %mask_ptr, align 8
  %4 = load <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, align 1
  call void @print_int_arr(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @res_test_arr_i.DFD30452.0, i32 0, i32 0), i64 %tag_len2, <{ i32, i32, i64*, i1* }>* %out_arr_alloca)
  ret void
}

declare void @print_int_arr(i8*, i64, <{ i32, i32, i64*, i1* }>*)
